# guitar-me

./: .gdbinit  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  STM32F303XX_FLASH.ld
cube/: .mxproject  CMakeLists.txt  cube.ioc
cube/Core/Inc/: dac.h  main.h  stm32f3xx_it.h
cube/Core/Src/: dac.c  gpio.c  main.c  stm32f3xx_it.c  usart.c
cube/cmake/stm32cubemx/: CMakeLists.txt
dsp/: decimate.py  display.py  notch.py  peak.py
firmware/: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  STM32F303XX_FLASH.ld  debug.sh
firmware/app/: CMakeLists.txt
firmware/app/include/: Codec.h  DSP.h  LED.h  OLED.h  control.h  display.h  dsp.h
firmware/app/include/fx/: eq.h  eq_w_lut.h  parameter.h
firmware/app/src/: Button.c  DSP.c  Encoder.c  LED.c  control.c  display.c  dsp.c  main.c
firmware/app/src/FX/: EQ_Peak.c
firmware/app/src/fx/: eq.c  eq_peak.c  eq_w_lut.c  parameter.c
firmware/boards/include/: bsp.h  bsp_codec.h  bsp_control.h  bsp_i2c.h  bsp_led.h
firmware/boards/nucleo-f303k8/: .gitattributes  .mxproject  CMakeLists.txt  guitar-me-nucleo-f303k8.ioc
firmware/boards/nucleo-f303k8/Core/Inc/: main.h  stm32f3xx_it.h
firmware/boards/nucleo-f303k8/Core/Src/: stm32f3xx_it.c
firmware/boards/nucleo-f303k8/cmake/: toolchain.cmake
firmware/boards/nucleo-f303k8/cmake/stm32cubemx/: CMakeLists.txt
firmware/boards/nucleo-f303k8/src/: bsp.c  bsp_codec.c  bsp_control.c  bsp_i2c.c  bsp_led.c
firmware/common/: CMakeLists.txt
firmware/common/include/: config.h  ring_buffer.h
firmware/common/src/: ring_buffer.c
firmware/drivers/: CMakeLists.txt
firmware/drivers/include/: oled.h
firmware/drivers/src/: oled.c
firmware/src/: main.c
firmware/tests/: CMakeLists.txt
firmware/tests/common/: CMakeLists.txt  test_ring_buffer.c
guitar-me-cube/: .mxproject  CMakeLists.txt  guitar-me-cube.ioc
guitar-me-cube/Core/Inc/: main.h
guitar-me-cube/Core/Src/: main.c  stm32f3xx_it.c
guitar-me-cube/cmake/stm32cubemx/: CMakeLists.txt
guitar-me-pcb/: guitar-me-pcb.kicad_sch
include/: Button.h  Codec.h  Config.h  DSP.h  Encoder.h  LED.h  OLED.h
include/FX/: EQ_Peak.h
pcb/: .gitignore  guitar-me-pcb.kicad_prl  guitar-me-pcb.kicad_pro
src/: Button.c  Codec.c  DSP.c  OLED.c  main.c
src/FX/: EQ_Peak.c
